implementación terminada